Change position to avoid overlap

--- a/src/convoworks/editor/props/properties-editor.scss
+++ b/src/convoworks/editor/props/properties-editor.scss
@@ -252,8 +252,8 @@
             .component-namespace {
                 display: inline;
                 position: absolute;
-                top: -2px;
-                right: 26px;
+                top: -23px;
+                left: 24px;
                 color: gray;
             }
         }
